@@ -82,6 +82,9 @@ Bugfixes:
 
   * Fix a potential infinite loop with nested template includes.  Inclusions
     are now limited to a maximum of 250 per page.
+  * Retrieval of the default file upload directory could fail on some systems,
+    causing property file initialization failure and preventing the application
+    server from starting.  Reported by Ivan.
 
 
 0.9.2
